(fix): swagger routes
